--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the drone flight time<br> 
+    What is the drone flight time calculator?<br>
+    The drone flight time calculator is a tool that computes the period that the drone will be flying for.<br>
+    How to calculate drone flight time?<br>
+    To calculate drone flight time you should use the following formula:<br>
+    drone flight time = (battery capacity * (battery discharge / 100) / (all up weight * 170 / battery voltage)) * 60<br>
+    Why use drone flight time calculator?<br>
+    The drone flight time calculator is used in order to determine the period that the drone will be flying for.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
